third_party/rust/chromium_crates_io/vendor/toml_edit-0.22.22/tests/fixtures/invalid/datetime/feb-29.stderr
TOML parse error at line 1, column 29
  |
1 | "not a leap year" = 2100-02-29T15:15:15Z
  |                             ^
invalid date-time
value is out of range
